<resources>
    <string name="app_name">Zodiacs</string>
    <string name="bach_duong_text">Xem tử vi 12 cung hoàng đạo 2018, Bạch Dương có nhiều xáo động. Vận thế đầu năm không được thuận lợi, giữa năm mọi việc trơn tru, trong khi cuối năm lại có nhiều biến động. Mặc dù năm nay vận thế thăng trầm, nhưng không thể phủ nhận rằng đó là trải nghiệm để tầm nhìn của bạn được mở rộng, bạn thấy yêu cuộc sống và có cách sống tích cực hơn.\n\nDo ảnh hưởng của sao Kim, cung hoàng đạo này có nhu cầu tiêu pha rất lớn vì bạn đề cao sự hưởng thụ vật chất, hào phóng chi tiêu vì thế đây là nguyên nhân bị thâm hụt ngân sách. May mắn thay, năm nay Bạch Dương theo đuổi sự nghiệp một cách tham vọng, bạn luôn muốn tạo sự khác biệt, nhờ đó thúc đẩy sự phát triển sự nghiệp của Bạch Dương. Do đó thu nhập của bạn cũng được cải thiện hơn.\n\nTuy nhiên khi công việc có biến chuyển tốt đẹp cũng là lúc có những biểu hiện không tốt về sức khỏe, tình trạng thể chất không tốt, nguyên nhân có thể do công việc quá bận rộn, mặc dù không đủ thời gian cân bằng nhưng không nên để tình trạng này kéo dài quá lâu mà nên dành thời gian để nghỉ ngơi và tập thể dục đúng cách.\n\nXem tử vi 12 cung hoàng đạo, năm 2018 của Bạch Dương, chuyện tình cảm trong tháng 3 khả quan nhất, bạn có những trải nghiệm vô cùng ngọt ngào của tình yêu và nếu độc thân thì cơ hội cao sẽ tìm thấy một nửa yêu thương trong thời điểm này. Còn lại hầu hết thời gian thì có quá nhiều vấn đề ngăn cản chuyện tình cảm có thể lạnh nhạt, tệ thì dẫn đến chia ly do cảm giác thiếu tin tưởng nhau. Để cải thiện tình hình, cung Bạch Dương và đối phương nên chia sẻ nhiều hơn để thấu hiểu nhu cầu của nhau.\n\nĐiều đáng nói là từ tháng 5 đến tháng 8, 9 và 11, khả năng giao tiếp của bạn được nâng cao, bạn có thể sử dụng khéo léo lợi thế để đạt được một cuộc trao đổi thú vị. Nhờ sự hỗ trợ của sao Hỏa, bạn sẽ rất hạnh phúc khi giao tiếp với người khác, học cách hòa nhập vào cộng đồng mới. Đó là mối quan hệ quan trọng, năm mới, Bạch Dương có cách nhìn nhận mới về các vấn đề, không bị ảnh hưởng quá nhiều bằng lối mòn trong suy nghĩ trước kia.</string>
    <string name="bao_binh_text">Tử vi cung Bảo Bình 2018, sao Thiên Vương ở trong khu vực của Bạch Dương và Kim Ngưu nhưng cách khá xa so với Bảo Bình điều đó đồng nghĩa với việc năm nay không có lợi cho lắm đối với những người thuộc cung hoàng đạo này. \n\nThời điểm đầu năm, sao Kim mang lại cho bạn chút tiền trong ngắn hạn, tuy nhiên số tiền này không mang lại sự giàu có nhưng nếu bạn thể nắm bắt cơ hội đầu tư, may mắn sẽ mang lại cho bạn số tiền lớn hơn. Cơ hội đến thoáng qua, rất chóng vánh, nếu không kịp nắm bắt thì phải chờ đến thời điểm cuối năm.\n\nXem tử vi năm 2018 của Bảo Bình, từ tháng 2, Bảo Bình khá khôn ngoan khi tham gia một dự án tốt nhưng về tổng thể thì việc kinh doanh không được như mong đợi. Có nhiều người soi mói, gặp cấp trên không phù hợp nên hiếm khi có cơ hội thể hiện tài năng. May mắn là bạn có nỗ lực và đóng vai trò cao hơn trong công việc nên tình hình cũng không quá tệ.\n\nTử vi 2018 của 12 cung hoàng đạo, về tình cảm, không có nhiều dấu hiệu khả quan trong những tháng đầu, từ tháng 1 đến tháng 3 những người độc thân đào hoa vượng, có rất nhiều người theo đuổi, nhưng họ vẫn tạo cho bạn cảm giác mơ hồ, dường như họ không thực sự cần bạn. Nửa năm còn lại, Bảo Bình trải qua khá nhiều cảm xúc nhưng hầu hết là không vui.\n\nSức khỏe của bạn không thực sự lý tưởng, mặc dù không bị bệnh nặng hay đau nghiêm trọng nhưng cơ thể trải qua rất nhiều khó chịu, hãy cẩn thận với sức khỏe của mình. Từ đầu đến giữa năm bạn thường có tâm trạng không vui, cần phải học cách thư giãn và giải tỏa áp lực của cuộc sống, đừng đặt tất cả gánh nặng lên vai của mình. Mùa Thu và mùa Đông phải chú ý đến sức khỏe, cố gắng giữ ấm cho cơ thể.\n\nTrong học tập, sao Thủy và sao Kim tác động tích cực ngay từ đầu năm nên thành tích học tập của bạn không quá đáng lo, nếu chăm chỉ và nỗ lực bạn sẽ được đền đáp xứng đáng nhưng trong lúc đó bạn vẫn có nhiều băn khoăn, suy nghĩ.\n\nNăm của sao Hỏa mang lại cho bạn những năng lượng mạnh mẽ, hầu hết các Bảo Bình sẽ chủ động tiếp thu kiến thức, nhưng có một số người học chỉ được những phút đầu sau đó lại bỏ bê. Bạn cần phải điều chỉnh thái độ mới có thể vượt qua áp lực, đạt thành tích tốt.</string>
    <string name="bo_cap_text">Tử vi cung Bọ Cạp 2018 (Hổ Cáp, Thiên Yết), trong năm nay sao Diêm Vương tiếp tục ngự trị tại khu vực công việc của Bọ Cạp truyền cảm hứng cho bạn để tiếp tục cố gắng, nỗ lực. Nhờ đó, tình hình học tập cho đến công việc đều có kết quả đáng kể. Bạn tăng sự kết nối hơn với mọi người, vai trò và vị trí của bạn được công nhận, cảm giác là người quan trọng khiết bạn thực sự rất tự hào, cảm thấy rất hài lòng về bản thân.\n\nSao Diêm Vương ảnh hưởng rất mạnh mẽ khiến công việc lúc lên lúc xuống. Nhưng nhìn chung, mọi việc trơn tru, thuận lợi chỉ đến tháng 9, ảnh hưởng của sao Diêm Vương giảm dần sẽ gây ra một tác động tiêu cực, lúc này bạn phải cẩn thận, không nên có những quyết định quan trọng vào lúc này.\n\nTại nơi làm việc, sao Diêm Vương nghịch hành nhắc nhở bạn cần cẩn thận trong các vấn đề thông tin liên lạc. Nên sống chan hòa với mọi người, duy trì quan hệ tốt đẹp, không nên vì lợi ích riêng mà làm ảnh hưởng tới tiền bạc của người khác. Nếu bạn để cho sự nghi ngờ của họ trỗi dậy, sẽ không hề thuận lợi cho tiến triển công việc của mình trong lai.\n\nXem tử vi 2018 của 12 cung hoàng đạo, năm nay bạn rất nhạy cảm về tiền bạc, khả năng quản lý tiền bạc được cải thiện và có thể nhờ thăng chức mà thu nhập tăng lên. Với những kinh nghiệm có được, bạn cẩn thận hơn với vấn đề liên quan tới tài chính. Bọ Cạp biết cách tiêu xài hợp lý, không gây lãng phí quá nhiều, đủ để duy trì mức sống cơ bản. Với sự hỗ trợ của sao Kim và sao Mộc, mọi việc khá suôn sẻ, thu nhập ổn định, cân bằng hài hòa giữa thu và chi.\n\nĐôi khi Bọ Cạp rơi vào tình huống tiến thoái lưỡng nan, các cặp đôi dễ xảy ra biến cố, nếu không kịp thời nói chuyện thẳng thắn và giải quyết mâu thuẫn, vấn đề sẽ ngày một chồng chất chờ thời điểm bùng nổ, gây ra thiệt hại vô cùng lớn. Cả hai đều có cảm giác tổn thương và muốn buông tay, chấp nhận thất bại, dễ rơi vào tình huống tiến thoái lưỡng nan.\n\nNăm 2018 của Bọ Cạp, với những ai độc thân bận rộn với công việc nên không quan tâm quá tới chuyện tình cảm. Bắt đầu từ nửa cuối tháng 8 đổ về sau vận đào hoa mới quay trở lại mang theo cho bạn những cơ hội mới.\n\nTình trạng sức khỏe khá ổn định, nhưng đôi khi xảy ra tai nạn nhỏ, việc bạn cần làm là phải lên kế hoạch đảm bảo sự an toàn, không để cho sự vô ý, vô tứ của mình khiến bản thân gặp họa.</string>
    <string name="cu_giai_text">Xem tử vi 12 cung hoàng đạo 2018, năm nay do sự thay đổi lớn quỹ đạo của Mặt Trăng, nên tâm thế của Cự Giải không ổn định, tâm trạng thất thường. Dù không có việc gì xảy ra chòm sao này vẫn cảm thấy phiền lòng nhưng không thể giải thích được lý do vì sao.\n\nNăm 2018 của Cự Giải sẽ trải qua nhiều giai đoạn căng thẳng. Nhưng bù lại, nhờ tác động của Mặt Trời và sao Kim, sự nghiệp và tài chính của bạn bước vào thời kỳ cao điểm. Đi kèm với đó là những ảnh hưởng tiêu cực của tiểu nhân vì ghen tị thành công của bạn mà họ sinh ra ghen ghét, đặt điều, gây trở ngại. Trong tình huống này, Cự Giải nên khiêm tốn, tùy thuộc vào hoàn cảnh mà xử lý cho phù hợp vì với những ai quá đáng quá thì bạn vẫn nên đáp trả chứ không nên im lặng vì mong rằng dĩ hòa vi quý.\n\nThời điểm từ giữa năm cho tới cuối năm do tác động của nhiều hành tinh khác nhau tạo nên quá nhiều biến động, mọi sự đều ngoài tầm kiểm soát của Cự Giải. Bạn phải đối mặt với những thách thức mới và cơ hội, nghề nghiệp, tình yêu, sức khỏe sẽ bước vào giai đoạn cần phải sửa đổi. Bạn sẽ nhận được rất nhiều góp ý và nhận xét từ mọi người ảnh hưởng đến quyết định của bạn. Nếu gặp được người giỏi trong các lĩnh vực này, tức là bạn có trong tay chìa khóa mở cánh cửa thành công, nếu không bạn sẽ đối mặt với nhiều rắc rối.\n\nCuối năm 2018, cung Cự Giải suy nghĩ rất nhiều và bạn nhận được những đáp án rất đáng kinh ngạc khiến bạn phải cố gắng rất nhiều để bản thân có thể đối mặt với thực tế.\n\nThực ra, bạn không cần phải lãng phí thời gian nghĩ ngợi nhiều, hãy để mọi thứ diễn ra tự nhiên vì bạn cần trải qua những thăng trầm như thế bạn mới trưởng thành hơn. Khoảng cách giữa thực tế và tưởng tượng chỉ có bạn mới thực sự đo lường được. Bất kể kết quả năm nay có ra sao thì vẫn can đảm để đối mặt với thách thức và nhờ đó những thứ được xem là bất khả thi cuối cùng sẽ trở thành có thể.</string>
    <string name="song_tu_text">Tử vi cung Song Tử 2018, nhìn chung mọi thứ của cung Song Tử đang giữ ở mức trung bình, ngoài ra, bạn sẽ tiếp tục phải chịu khá nhiều áp lực trong năm nay.\n\nTháng 4, 8 và 10 do ảnh hưởng của sao Thủy nghịch hành, cuộc sống của bạn hoàn toàn thay đổi, khó có thể kiểm soát được mọi việc. Song Tử thường có những suy nghĩ ngắn hạn, dễ đưa ra những quyết định sai lầm dẫn đến những rắc rối không đáng có. Tuy nhiên, những tháng còn lại không bị ảnh hưởng của sao Thủy nghịch hành nên Song Tử vẫn có những cơ hội tốt, cố gắng nắm bắt.\n\nVề công việc, Song Tử chịu áp lực tương đối lớn, đa phần do chính mình gây ra. Áp lực từ cấp trên thì ít còn áp lực do bạn tạo ra vì cả nghĩ là nhiều. Bạn bị động trong công việc nên thường xuyên phải đối phó với những tình huống bất ngờ, dẫn đến kế hoạch bị hỏng do không khả thi. Mặc dù bạn đủ khả năng đối phó nhưng lúc này quá hoang mang lo lắng nên nhiều lúc không biết nên làm gì, áp lực lại càng gia tăng. Tuy nhiên, trong năm nay vẫn có những tháng khả quan như tháng 1 và 5.\n\nXem tử vi 2018 của 12 cung hoàng đạo, tình hình tài chính của Song Tử không được ổn định, dễ bị hao tiền tốn của. Mặc dù nguồn thu ổn định, nhưng có rất nhiều khoản chi phí ngoài dự tính như tiếp khách, thăm nom người bệnh… Bạn cũng sẽ nhận được nhiều lời mời đám cưới, hoặc một số vấn đề xảy ra trong gia đình buộc phải chi tiêu nhiều. Vì vậy, năm nay nên dành riêng một khoản tiền để bạn chủ động trong trường hợp khẩn cấp.\n\nXem bói tình yêu 12 cung hoàng đạo, trong tình yêu, Song Tử luôn luôn chú ý hơn đến sự hài lòng về mặt tinh thần của đôi bên, bạn quan tâm tới tương lai về chuyện tình cảm này. Vì thế, mặc dù là người không thực tế trong chuyện yêu đương nhưng bạn đứng trước quyết định kết hôn bạn lại khá thực tế và chắc chắn.\n\nTrong năm 2018 của Song Tử, những người độc thân với bản tính quá mơ mộng dễ bị tổn thương khi phải đối mặt với thực tế phũ phàng. Điều gì cũng nên cẩn thận không nên bất cẩn, vội vàng, mang lại ấn tượng xấu cho đối phương.\n\nBạn cảm thấy khó thoát khỏi những áp lực của cuộc sống dẫn đến rối loạn tinh thần, và những sự cố bất ngờ khiến sức khỏe của bạn bị ảnh hưởng. Do tác động của sao Thủy nghịch hành, sức khỏe chịu nhiều tác động tiêu cực hơn, lại thêm tác động của môi trường sống khiến bạn rất nhạy cảm. Do đó, trong năm nay, cố gắng kiểm soát tốt những cảm xúc để cân bằng tốt trạng thái của mình.</string>
    <string name="song_tu_title1">Song Tử – Gemini\n(21/5 – 21/6)</string>
    <string name="song_tu_title2">Song Tử – Gemini (21/5 – 21/6)</string>
    <string name="text_button_back">quay lại</string>
    <string name="text_more">xem thêm</string>
</resources>