<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@color/colorBackground">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_button_back"
            android:textColor="@color/white"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:padding="8dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/bg_button_back"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textColor="@color/colorYellow"
            android:text="@string/song_tu_title1"
            android:layout_marginTop="60dp"
            android:layout_marginEnd="60dp"
            android:textSize="16sp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="60dp"
            android:paddingBottom="16dp"
            android:background="@drawable/bg_content_detail_zodiac"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            app:layout_constraintVertical_bias="1.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="horizontal"
                android:paddingTop="60dp">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/contentZodiac"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="24dp"
                    android:text="@string/song_tu_text"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

            </LinearLayout>

        </ScrollView>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageBackground"
            android:layout_width="@dimen/size_bg_image_detail"
            android:layout_height="@dimen/size_bg_image_detail"
            app:srcCompat="@drawable/ic_circle_blank"
            android:layout_marginStart="12dp"
            app:layout_constraintTop_toTopOf="@id/title"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_width="@dimen/size_image_detail"
            android:layout_height="@dimen/size_image_detail"
            app:srcCompat="@drawable/ic_song_tu"
            app:layout_constraintTop_toTopOf="@id/imageBackground"
            app:layout_constraintBottom_toBottomOf="@id/imageBackground"
            app:layout_constraintStart_toStartOf="@id/imageBackground"
            app:layout_constraintEnd_toEndOf="@id/imageBackground" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
