<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.constraintlayout.widget.ConstraintLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        tools:context=".ui.activity.MainActivity">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/centerGuideLine"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.56" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageCircle"
            android:layout_width="@dimen/size_circle"
            android:layout_height="@dimen/size_circle"
            app:srcCompat="@drawable/ic_circle_blank"
            android:rotation="270"
            android:padding="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/centerGuideLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iconKimNguu"
            android:layout_width="@dimen/size_image_zodiac"
            android:layout_height="@dimen/size_image_zodiac"
            android:src="@drawable/ic_kim_nguu"
            app:layout_constraintTop_toTopOf="@id/imageCircle"
            app:layout_constraintStart_toStartOf="@id/imageCircle"
            app:layout_constraintEnd_toEndOf="@id/imageCircle" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iconSongTu"
            android:layout_width="@dimen/size_image_zodiac"
            android:layout_height="@dimen/size_image_zodiac"
            android:src="@drawable/ic_song_tu"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toTopOf="@id/imageCircle"
            app:layout_constraintStart_toEndOf="@id/iconKimNguu" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iconCuGiai"
            android:layout_width="@dimen/size_image_zodiac"
            android:layout_height="@dimen/size_image_zodiac"
            android:src="@drawable/ic_cu_giai"
            android:layout_marginEnd="40dp"
            app:layout_constraintBottom_toTopOf="@id/iconSuTu"
            app:layout_constraintTop_toBottomOf="@id/iconSongTu"
            app:layout_constraintStart_toEndOf="@id/iconSongTu"
            app:layout_constraintEnd_toEndOf="@id/imageCircle" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iconSuTu"
            android:layout_width="@dimen/size_image_zodiac"
            android:layout_height="@dimen/size_image_zodiac"
            android:src="@drawable/ic_su_tu"
            app:layout_constraintTop_toTopOf="@id/imageCircle"
            app:layout_constraintEnd_toEndOf="@id/imageCircle"
            app:layout_constraintBottom_toBottomOf="@id/imageCircle"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iconXuNu"
            android:layout_width="@dimen/size_image_zodiac"
            android:layout_height="@dimen/size_image_zodiac"
            android:src="@drawable/ic_xu_nu"
            android:layout_marginEnd="24dp"
            app:layout_constraintTop_toBottomOf="@id/iconSuTu"
            app:layout_constraintEnd_toEndOf="@id/imageCircle" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iconThienBinh"
            android:layout_width="@dimen/size_image_zodiac"
            android:layout_height="@dimen/size_image_zodiac"
            android:src="@drawable/ic_thien_binh"
            android:layout_marginBottom="40dp"
            app:layout_constraintTop_toBottomOf="@id/iconXuNu"
            app:layout_constraintStart_toEndOf="@id/iconBoCap"
            app:layout_constraintEnd_toStartOf="@id/iconXuNu"
            app:layout_constraintBottom_toBottomOf="@id/imageCircle"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iconBoCap"
            android:layout_width="@dimen/size_image_zodiac"
            android:layout_height="@dimen/size_image_zodiac"
            android:src="@drawable/ic_bocap"
            app:layout_constraintBottom_toBottomOf="@id/imageCircle"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iconNhanMa"
            android:layout_width="@dimen/size_image_zodiac"
            android:layout_height="@dimen/size_image_zodiac"
            android:src="@drawable/ic_nhan_ma"
            android:layout_marginBottom="40dp"
            app:layout_constraintTop_toTopOf="@id/iconBoCap"
            app:layout_constraintBottom_toBottomOf="@id/imageCircle"
            app:layout_constraintEnd_toStartOf="@id/iconBoCap" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iconMaKet"
            android:layout_width="@dimen/size_image_zodiac"
            android:layout_height="@dimen/size_image_zodiac"
            android:src="@drawable/ic_ma_ket"
            android:layout_marginStart="24dp"
            app:layout_constraintTop_toBottomOf="@id/iconBaoBinh"
            app:layout_constraintEnd_toStartOf="@id/iconNhanMa"
            app:layout_constraintStart_toStartOf="@id/imageCircle" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iconBaoBinh"
            android:layout_width="@dimen/size_image_zodiac"
            android:layout_height="@dimen/size_image_zodiac"
            android:src="@drawable/ic_bao_binh"
            app:layout_constraintBottom_toBottomOf="@id/imageCircle"
            app:layout_constraintTop_toTopOf="@id/imageCircle"
            app:layout_constraintStart_toStartOf="@id/imageCircle" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iconBachDuong"
            android:layout_width="@dimen/size_image_zodiac"
            android:layout_height="@dimen/size_image_zodiac"
            android:src="@drawable/ic_bach_duong"
            android:layout_marginTop="28dp"
            app:layout_constraintTop_toTopOf="@id/iconKimNguu"
            app:layout_constraintEnd_toStartOf="@id/iconKimNguu" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iconSongNgu"
            android:layout_width="@dimen/size_image_zodiac"
            android:layout_height="@dimen/size_image_zodiac"
            android:src="@drawable/ic_song_ngu"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toTopOf="@id/iconBaoBinh"
            app:layout_constraintTop_toBottomOf="@id/iconSongTu"
            app:layout_constraintStart_toStartOf="@id/imageCircle" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageAppName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_bg_title"
            app:layout_constraintTop_toBottomOf="@id/centerGuideLine"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <LinearLayout
            android:id="@+id/layoutContent"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:layout_marginBottom="16dp"
            android:layout_marginHorizontal="24dp"
            android:background="@drawable/bg_content_detail_zodiac"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/imageAppName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/title2"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textColor="@color/colorYellow"
                android:text="@string/song_tu_title2"
                android:textSize="16sp"
                android:gravity="center_vertical"
                android:layout_marginStart="48dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/content"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="2"
                android:textColor="@color/white"
                android:text="@string/song_tu_text"
                android:textSize="16sp"
                android:layout_marginHorizontal="12dp" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textMore"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:textStyle="bold"
                android:textAllCaps="true"
                android:textColor="@color/black"
                android:background="@drawable/bg_round"
                android:text="@string/text_more"
                android:textSize="14sp"
                android:padding="4dp"
                android:layout_marginStart="12dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:gravity="center_vertical" />

        </LinearLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideLine2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.72"/>

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageExplain"
            android:layout_width="@dimen/size_image_zodiac"
            android:layout_height="@dimen/size_image_zodiac"
            app:srcCompat="@drawable/ic_song_tu"
            android:visibility="invisible"
            app:layout_constraintTop_toBottomOf="@id/guideLine2"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>